--- a/2-term/3.1/makefile
+++ b/2-term/3.1/makefile
@@ -1,5 +1,5 @@
 TARGET_1 = http-proxy
-SRCS_1 = http-proxy.c main.c
+SRCS_1 = picohttpparser.c http-proxy.c main.c
 
 CC=gcc
 RM=rm
@@ -9,7 +9,7 @@ INCLUDE_DIR="."
 
 all: ${TARGET_1}
 
-${TARGET_1}: http-proxy.h ${SRCS_1}
+${TARGET_1}: picohttpparser.h http-proxy.h ${SRCS_1}
 	${CC} ${CFLAGS} -I${INCLUDE_DIR} ${SRCS_1} ${LIBS} -o ${TARGET_1}
 
 clean:
